--- a/app/views/insurers/show.html.erb
+++ b/app/views/insurers/show.html.erb
@@ -1,4 +1,4 @@
-<h4><%= @insurer.full_name %> - Detail</h4>
+<h4><%= @insurer.name %> - Detail</h4>
 
 <table class="table table-bordered">
   <thead>
