--- a/app/views/breaks/show.html.erb
+++ b/app/views/breaks/show.html.erb
@@ -1,19 +1,30 @@
-<p id="notice"><%= notice %></p>
+<h4>Break Detail</h4>
 
-<p>
-  <strong>Expense:</strong>
-  <%= @break.expense %>
-</p>
+<table class="table table-bordered">
+  <thead>
+  <tr>
+    <th>Cause</th>
+    <th>Start Date</th>
+    <th>End Date</th>
+    <th>Delay</th>
+    <th>Amount</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td><%= BreakCause.find(@break.break_cause_id).name %></td>
+    <td><%= @break.start_date %></td>
+    <td><%= @break.end_date %></td>
+    <td><%= (@break.end_date - @break.start_date).to_i %> days</td>
+    <td><%= Expense.find(@break.expense.id).amount %> DH</td>
+  </tr>
+  </tbody>
+</table>
 
-<p>
-  <strong>Start date:</strong>
-  <%= @break.start_date %>
-</p>
+<%= link_to breaks_path, :class => 'badge badge-light' do %>
+    <%= fa_icon 'arrow-left' %> Retour
+<% end %>
 
-<p>
-  <strong>End date:</strong>
-  <%= @break.end_date %>
-</p>
-
-<%= link_to 'Edit', edit_break_path(@break) %> |
-<%= link_to 'Back', breaks_path %>
+<%= link_to edit_break_path(@break), :class => 'badge badge-dark' do %>
+    <%= fa_icon 'pencil' %> Edit
+<% end %>
