--- a/app/views/damages/show.html.erb
+++ b/app/views/damages/show.html.erb
@@ -1,15 +1,33 @@
-<p id="notice"><%= notice %></p>
+<h4>Damage Detail</h4>
 
-<p>
-  <strong>Damage type:</strong>
-  <%= @damage.damage_type %>
-</p>
+<table class="table table-bordered">
+  <thead>
+  <tr>
+    <th>Cause</th>
+    <th>Driver</th>
+    <th>Date</th>
+    <th>Kilometers</th>
+    <th>Labor</th>
+    <th>Amount</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td><%= DamageType.find(@damage.damage_type.id).name %></td>
+    <td><%= Driver.find(@damage.driver_id).full_name %></td>
+    <td><%= @damage.date %></td>
+    <td><%= @damage.kilometers %></td>
+    <td><%= @damage.labor %></td>
+    <td><%= Expense.find(@damage.expense.id).amount %> DH</td>
+  </tr>
+  </tbody>
+</table>
 
-<p>
-  <strong>Expense:</strong>
-  <%= @damage.expense %>
-</p>
+<%= link_to damages_path, :class => 'badge badge-light' do %>
+    <%= fa_icon 'arrow-left' %> Retour
+<% end %>
 
+<%= link_to edit_damage_path(@damage), :class => 'badge badge-dark' do %>
+    <%= fa_icon 'pencil' %> Edit
+<% end %>
 
-<%= link_to 'Edit', edit_damage_path(@damage) %> |
-<%= link_to 'Back', damages_path %>
