--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -1,72 +1,155 @@
-<%= form_with(model: driver, local: true) do |form| %>
+<%= form_for @driver do |form| %>
 
-    <% if driver.errors.any? %>
-      <div id="error_explanation">
-        <h2><%= pluralize(driver.errors.count, "error") %> prohibited this driver from being saved:</h2>
-
-        <ul>
-        <% driver.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
+    <div class="form-group row">
+      <%= form.label 'Full Name', class: 'col-sm-2 col-form-label' %>
+      <div class="col-sm-10">
+        <%= form.text_field :full_name, class: 'form-control' %>
+        <% if !@driver.errors.messages[:'full_name'].empty?  %>
+            <ul>
+              <% @driver.errors.messages[:'full_name'].each do |message| %>
+                  <li>
+                    <small class="form-text text-muted text-error"><%= message %></small>
+                  </li>
+              <% end %>
+            </ul>
         <% end %>
-        </ul>
       </div>
-    <% end %>
-
-    <div class="field">
-      <%= form.label :full_name %>
-      <%= form.text_field :full_name, id: :driver_full_name %>
     </div>
 
-    <div class="field">
-      <%= form.label :birth_date %>
-      <%= form.date_field :birth_date, id: :driver_birth_date %>
+    <div class="form-group row">
+      <%= form.label 'Birth Date', class: 'col-sm-2 col-form-label' %>
+      <div class="col-sm-10">
+        <%= form.text_field :birth_date, class: 'form-control' %>
+        <% if !@driver.errors.messages[:'birth_date'].empty?  %>
+            <ul>
+              <% @driver.errors.messages[:'birth_date'].each do |message| %>
+                  <li>
+                    <small class="form-text text-muted text-error"><%= message %></small>
+                  </li>
+              <% end %>
+            </ul>
+        <% end %>
+      </div>
     </div>
 
-    <div class="field">
-      <%= form.label :mobile_phone %>
-      <%= form.number_field :mobile_phone, id: :driver_mobile_phone %>
+    <div class="form-group row">
+      <%= form.label 'Mobile Phone', class: 'col-sm-2 col-form-label' %>
+      <div class="col-sm-10">
+        <%= form.text_field :mobile_phone, class: 'form-control' %>
+        <% if !@driver.errors.messages[:'mobile_phone'].empty?  %>
+            <ul>
+              <% @driver.errors.messages[:'mobile_phone'].each do |message| %>
+                  <li>
+                    <small class="form-text text-muted text-error"><%= message %></small>
+                  </li>
+              <% end %>
+            </ul>
+        <% end %>
+      </div>
     </div>
 
-    <div class="field">
-      <%= form.label :home_phone %>
-      <%= form.number_field :home_phone, id: :driver_home_phone %>
+    <div class="form-group row">
+      <%= form.label 'Home Phone', class: 'col-sm-2 col-form-label' %>
+      <div class="col-sm-10">
+        <%= form.text_field :home_phone, class: 'form-control' %>
+        <% if !@driver.errors.messages[:'home_phone'].empty?  %>
+            <ul>
+              <% @driver.errors.messages[:'home_phone'].each do |message| %>
+                  <li>
+                    <small class="form-text text-muted text-error"><%= message %></small>
+                  </li>
+              <% end %>
+            </ul>
+        <% end %>
+      </div>
     </div>
 
-    <div class="field">
-      <%= form.label :driving_license_number %>
-      <%= form.text_field :driving_license_number, id: :driver_driving_license_number %>
+    <div class="form-group row">
+      <%= form.label 'Driver License Number', class: 'col-sm-2 col-form-label' %>
+      <div class="col-sm-10">
+        <%= form.text_field :driving_license_number, class: 'form-control' %>
+        <% if !@driver.errors.messages[:'driving_license_number'].empty?  %>
+            <ul>
+              <% @driver.errors.messages[:'driving_license_number'].each do |message| %>
+                  <li>
+                    <small class="form-text text-muted text-error"><%= message %></small>
+                  </li>
+              <% end %>
+            </ul>
+        <% end %>
+      </div>
     </div>
 
-    <div class="field">
-      <%= form.label :home_address %>
-      <%= form.text_area :home_address, id: :home_address %>
+    <div class="form-group row">
+      <%= form.label 'CIN', class: 'col-sm-2 col-form-label' %>
+      <div class="col-sm-10">
+        <%= form.text_field :cin, class: 'form-control' %>
+        <% if !@driver.errors.messages[:'cin'].empty?  %>
+            <ul>
+              <% @driver.errors.messages[:'cin'].each do |message| %>
+                  <li>
+                    <small class="form-text text-muted text-error"><%= message %></small>
+                  </li>
+              <% end %>
+            </ul>
+        <% end %>
+      </div>
     </div>
 
-    <div class="field">
-      <%= form.label :cin %>
-      <%= form.text_field :cin, id: :cin %>
+    <div class="form-group row">
+      <%= form.label 'Start Date', class: 'col-sm-2 col-form-label' %>
+      <div class="col-sm-10">
+        <%= form.date_field :start_date, class: 'form-control' %>
+        <% if !@driver.errors.messages[:'start_date'].empty?  %>
+            <ul>
+              <% @driver.errors.messages[:'start_date'].each do |message| %>
+                  <li>
+                    <small class="form-text text-muted text-error"><%= message %></small>
+                  </li>
+              <% end %>
+            </ul>
+        <% end %>
+      </div>
     </div>
 
-    <div class="field">
-      <%= form.label :start_date %>
-      <%= form.date_field :start_date, id: :start_date %>
+    <div class="form-group row">
+      <%= form.label 'End Date', class: 'col-sm-2 col-form-label' %>
+      <div class="col-sm-10">
+        <%= form.date_field :end_date, class: 'form-control' %>
+        <% if !@driver.errors.messages[:'end_date'].empty?  %>
+            <ul>
+              <% @driver.errors.messages[:'end_date'].each do |message| %>
+                  <li>
+                    <small class="form-text text-muted text-error"><%= message %></small>
+                  </li>
+              <% end %>
+            </ul>
+        <% end %>
+      </div>
     </div>
 
-    <div class="field">
-      <%= form.label :end_date %>
-      <%= form.date_field :end_date, id: :end_date %>
-    </div>
-
-    <div class="field">
-      <%= form.label :cab_id %>
-      <%= form.collection_select :cab_id, Cab.group(:license_plate), :id, :license_plate, {
-            :multiple => false,
-            :include_blank => 'Select a Cab',
-          } %>
+    <div class="form-group row">
+      <%= form.label 'Cab', class: 'col-sm-2 col-form-label' %>
+      <div class="col-sm-10">
+        <%= form.collection_select :cab_id, Cab.group(:license_plate), :id, :license_plate, {
+          :multiple => false,
+          :include_blank => 'Select a Cab',
+        },{ class: 'form-control' }
+        %>
+        <% if !@driver.errors.messages[:'cab_id'].empty?  %>
+            <ul>
+              <% @driver.errors.messages[:'cab_id'].each do |message| %>
+                  <li>
+                    <small class="form-text text-muted text-error"><%= message %></small>
+                  </li>
+              <% end %>
+            </ul>
+        <% end %>
+      </div>
     </div>
 
     <div class="actions">
-      <%= form.submit %>
+      <%= form.submit 'Save', :class => 'btn btn-info' %>
     </div>
 
 <% end %>
