--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -1,43 +1,57 @@
-<p id="notice"><%= notice %></p>
+<h4>Marque</h4>
 
-<h1>Drivers</h1>
+<!-- # -->
+<div class="actions row">
 
-<table>
+  <div class="col-md-4">
+    <%= link_to new_driver_path, :class => 'btn btn-info btn-sm' do %>
+        <%= fa_icon 'plus' %> Add a New Driver
+    <% end %>
+  </div>
+
+  <div class="col-md-4 ml-auto">
+    <input type="search"
+           class="form-control"
+           id="search-driver"
+           placeholder="Votre Recherche..." aria-label="Votre Recherche...">
+  </div>
+
+</div>
+
+<!-- # -->
+<table id="driver-data" class="table table-bordered">
   <thead>
-    <tr>
-      <th>Full name</th>
-      <th>Birth date</th>
-      <th>Mobile phone</th>
-      <th>Home phone</th>
-      <th>Driving license number</th>
-      <th>Home address</th>
-      <th>CIN</th>
-      <th>Starting Date</th>
-      <th>Ending Date</th>
-      <th colspan="3"></th>
-    </tr>
+  <tr>
+    <th>Full name</th>
+    <th>Birth date</th>
+    <th>Starting Date</th>
+    <th>Mobile phone</th>
+    <th>Driving license number</th>
+    <th class="td-actions">Actions</th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @drivers.each do |driver| %>
+  <% @drivers.each do |driver| %>
       <tr>
         <td><%= driver.full_name %></td>
         <td><%= driver.birth_date %></td>
-        <td><%= driver.mobile_phone %></td>
-        <td><%= driver.home_phone %></td>
-        <td><%= driver.driving_license_number %></td>
-        <td><%= driver.home_address %></td>
-        <td><%= driver.cin %></td>
         <td><%= driver.start_date %></td>
-        <td><%= driver.end_date %></td>
-        <td><%= link_to 'Show', driver %></td>
-        <td><%= link_to 'Edit', edit_driver_path(driver) %></td>
-        <td><%= link_to 'Destroy', driver, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= driver.mobile_phone %></td>
+        <td><%= driver.driving_license_number %></td>
+        <td>
+          <%= link_to driver, :class => 'btn btn-outline-dark btn-sm' do %>
+              <%= fa_icon 'eye' %>
+          <% end %>
+          <%= link_to edit_driver_path(driver), :class => 'btn btn-outline-dark btn-sm' do %>
+              <%= fa_icon 'pencil' %>
+          <% end %>
+          <%= link_to driver, method: :delete, data: {confirm: 'Êtes vous sur?'}, class: 'btn btn-outline-dark btn-sm' do %>
+              <%= fa_icon 'close' %>
+          <% end %>
+        </td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
+
 </table>
-
-<br>
-
-<%= link_to 'New Driver', new_driver_path %>
