--- a/app/views/insurances/show.html.erb
+++ b/app/views/insurances/show.html.erb
@@ -1,19 +1,28 @@
-<p id="notice"><%= notice %></p>
+<h4>Insurance Detail</h4>
 
-<p>
-  <strong>Expense:</strong>
-  <%= @insurance.expense %>
-</p>
+<table class="table table-bordered">
+  <thead>
+  <tr>
+    <th>Insurer</th>
+    <th>Start Date</th>
+    <th>Expiration Date</th>
+    <th>Amount</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td><%= Insurer.find(@insurance.insurer_id).name %></td>
+    <td><%= @insurance.start_date %></td>
+    <td><%= @insurance.expiration_date %></td>
+    <td><%= Expense.find(@insurance.expense.id).amount %> DH</td>
+  </tr>
+  </tbody>
+</table>
 
-<p>
-  <strong>Start date:</strong>
-  <%= @insurance.start_date %>
-</p>
+<%= link_to insurances_path, :class => 'badge badge-light' do %>
+    <%= fa_icon 'arrow-left' %> Retour
+<% end %>
 
-<p>
-  <strong>End date:</strong>
-  <%= @insurance.expiration_date %>
-</p>
-
-<%= link_to 'Edit', edit_insurance_path(@insurance) %> |
-<%= link_to 'Back', insurances_path %>
+<%= link_to edit_insurance_path(@insurance), :class => 'badge badge-dark' do %>
+    <%= fa_icon 'pencil' %> Edit
+<% end %>
