--- a/app/views/breaks/index.html.erb
+++ b/app/views/breaks/index.html.erb
@@ -5,7 +5,7 @@
 
   <div class="col-md-4">
     <%= link_to new_break_path, :class => 'btn btn-info btn-sm' do %>
-        Ajouter un nouveau Arrêt
+        <%= fa_icon 'plus' %> Add a New Break
     <% end %>
   </div>
 
