--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,17 +1,16 @@
-
 <div class="row stats-col">
 
   <!-- # Insurances -->
-  <%= render 'insurances' %>
+  <%= render 'expenses/sub-pages/insurances' %>
 
   <!-- # Breaks -->
-  <%= render 'breaks' %>
+  <%= render 'expenses/sub-pages/breaks' %>
 
   <!-- # Damages -->
-  <%= render 'damages' %>
+  <%= render 'expenses/sub-pages/damages' %>
 
   <!-- # Owner Takes -->
-  <%= render 'owner_takes' %>
+  <%= render 'expenses/sub-pages/owner_takes' %>
 
 </div>
 
