--- a/app/views/break_causes/edit.html.erb
+++ b/app/views/break_causes/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing Break Type</h1>
+<h4>Edit</h4>
 
 <%= render 'form', break_cause: @break_cause %>
 
-<%= link_to 'Show', @break_cause %> |
-<%= link_to 'Back', break_causes_path %>
+<%= link_to break_causes_path, :class => 'badge badge-light' do %>
+    <%= fa_icon 'arrow-left' %> Go Back
+<% end %>
+
+<%= link_to @break_cause, :class => 'badge badge-light' do %>
+    <%= fa_icon 'eye' %> More Detail
+<% end %>
