--- a/app/views/break_causes/index.html.erb
+++ b/app/views/break_causes/index.html.erb
@@ -1,27 +1,49 @@
-<p id="notice"><%= notice %></p>
+<h4>Break Causes</h4>
 
-<h1>Break Types</h1>
+<!-- # -->
+<div class="actions row">
 
-<table>
+  <div class="col-md-4">
+    <%= link_to new_break_cause_path, :class => 'btn btn-info btn-sm' do %>
+        <%= fa_icon 'plus' %> Add a New Break Cause
+    <% end %>
+  </div>
+
+  <div class="col-md-4 ml-auto">
+    <input type="search"
+           class="form-control"
+           id="search-break-cause"
+           placeholder="Votre Recherche..." aria-label="Votre Recherche...">
+  </div>
+
+</div>
+
+<!-- # -->
+<table id="break-cause-data" class="table table-bordered">
   <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
+  <tr>
+    <th>Name</th>
+    <th class="td-actions">Actions</th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @break_causes.each do |break_cause| %>
+  <% @break_causes.each do |break_cause| %>
       <tr>
         <td><%= break_cause.name %></td>
-        <td><%= link_to 'Show', break_cause %></td>
-        <td><%= link_to 'Edit', edit_break_cause_path(break_cause) %></td>
-        <td><%= link_to 'Destroy', break_cause, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to break_cause, :class => 'btn btn-outline-dark btn-sm' do %>
+              <%= fa_icon 'eye' %> Show
+          <% end %>
+          <%= link_to edit_break_cause_path(break_cause), :class => 'btn btn-outline-dark btn-sm' do %>
+              <%= fa_icon 'pencil' %> Edit
+          <% end %>
+          <%= link_to break_cause, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-dark btn-sm' do %>
+              <%= fa_icon 'trash' %> Destroy
+          <% end %>
+        </td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
+
 </table>
-
-<br>
-
-<%= link_to 'New Break Type', new_break_cause_path %>
