--- a/app/views/break_causes/new.html.erb
+++ b/app/views/break_causes/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Break Type</h1>
+<h4>New</h4>
 
 <%= render 'form', break_cause: @break_cause %>
 
-<%= link_to 'Back', break_causes_path %>
+<%= link_to break_causes_path, :class => 'badge badge-light' do %>
+    <%= fa_icon 'arrow-left' %> Retour
+<% end %>
