--- a/app/views/cab_models/index.html.erb
+++ b/app/views/cab_models/index.html.erb
@@ -5,7 +5,7 @@
 
   <div class="col-md-4">
     <%= link_to new_cab_model_path, :class => 'btn btn-info btn-sm' do %>
-        <%= fa_icon 'plus' %> Ajouter une nouvelle Marque
+        <%= fa_icon 'plus' %> Add a New Model
     <% end %>
   </div>
 
