--- a/app/views/cabs/index.html.erb
+++ b/app/views/cabs/index.html.erb
@@ -5,7 +5,7 @@
 
   <div class="col-md-4">
     <%= link_to new_cab_path, :class => 'btn btn-info btn-sm' do %>
-        <%= fa_icon 'plus' %> Ajouter un nouveau Taxi
+        <%= fa_icon 'plus' %> Add a New Cab
     <% end %>
   </div>
 
