--- a/app/views/damages/index.html.erb
+++ b/app/views/damages/index.html.erb
@@ -5,7 +5,7 @@
 
   <div class="col-md-4">
     <%= link_to new_damage_path, :class => 'btn btn-info btn-sm' do %>
-        <%= fa_icon 'plus' %> Ajouter un nouveau Dégât
+        <%= fa_icon 'plus' %> Add a New Damage
     <% end %>
   </div>
 
