--- a/app/views/insurances/index.html.erb
+++ b/app/views/insurances/index.html.erb
@@ -5,7 +5,7 @@
 
   <div class="col-md-4">
     <%= link_to new_insurance_path, :class => 'btn btn-info btn-sm' do %>
-        Ajouter une nouvelle Assurance
+        <%= fa_icon 'plus' %> Add a New Insurance
     <% end %>
   </div>
 
