--- a/app/views/manager_takes/index.html.erb
+++ b/app/views/manager_takes/index.html.erb
@@ -5,7 +5,7 @@
 
   <div class="col-md-4">
     <%= link_to new_manager_take_path, :class => 'btn btn-info btn-sm' do %>
-        Ajouter une nouvelle Recette
+        <%= fa_icon 'plus' %> Add a New Manager Take
     <% end %>
   </div>
 
