--- a/app/views/manager_takes/show.html.erb
+++ b/app/views/manager_takes/show.html.erb
@@ -12,7 +12,7 @@
   <tr>
     <td><%= Manager.find(@manager_take.manager_id).full_name %></td>
     <td><%= @manager_take.date %></td>
-    <td><%= Expense.find(@manager_take.income_id).amount %> DH</td>
+    <td><%= Income.find(@manager_take.income_id).amount %> DH</td>
   </tr>
   </tbody>
 </table>
