--- a/app/views/owners/index.html.erb
+++ b/app/views/owners/index.html.erb
@@ -5,7 +5,7 @@
 
   <div class="col-md-4">
     <%= link_to new_owner_path, :class => 'btn btn-info btn-sm' do %>
-        <%= fa_icon 'plus' %> Ajouter un nouveau Propriétaire
+        <%= fa_icon 'plus' %> Add a New Owner
     <% end %>
   </div>
 
