--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,16 +1,25 @@
-<div class="row stats-col">
+<div class="row stats-col table-card">
 
   <!-- # Insurances -->
-  <%= render 'expenses/sub-pages/insurances' %>
+  <div class="col-md-6">
+    <%= render 'expenses/sub-pages/insurances' %>
+  </div>
 
   <!-- # Breaks -->
-  <%= render 'expenses/sub-pages/breaks' %>
+  <div class="col-md-6">
+    <%= render 'expenses/sub-pages/breaks' %>
+  </div>
 
   <!-- # Damages -->
-  <%= render 'expenses/sub-pages/damages' %>
+  <div class="col-md-6">
+    <%= render 'expenses/sub-pages/damages' %>
+  </div>
 
   <!-- # Owner Takes -->
-  <%= render 'expenses/sub-pages/owner_takes' %>
+  <div class="col-md-6">
+    <%= render 'expenses/sub-pages/owner_takes' %>
+  </div>
+
 
 </div>
 
