--- a/app/views/incomes/index.html.erb
+++ b/app/views/incomes/index.html.erb
@@ -1,6 +1,8 @@
-<div class="row stats-col">
+<div class="row stats-col table-card">
 
   <!-- # Manager Takes -->
-  <%= render 'incomes/sub-pages/manager_takes' %>
+  <div class="col-md-6">
+    <%= render 'incomes/sub-pages/manager_takes' %>
+  </div>
 
 </div>
