--- a/app/views/statistics/expenses.html.erb
+++ b/app/views/statistics/expenses.html.erb
@@ -1,10 +1,12 @@
 <div class="row">
 
   <!-- All Expenses -->
-  <%= render 'statistics/expenses/all_expenses_stats' %>
+  <div class="col-md-6">
+    <%= render 'statistics/expenses/all_expenses_stats' %>
+  </div>
 
   <!-- # Right Column -->
-  <div class="col-md-7 stats-col">
+  <div class="col-md-6 stats-col">
 
     <!-- # Insurances -->
     <%= render 'statistics/expenses/insurances_stats' %>
