--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,16 +12,16 @@
  *
  */
 @import 'fonts';
-@import 'font-awesome';
+@import '~font-awesome';
 
 // Bootstrap
-@import '../../../node_modules/bootstrap/dist/css/bootstrap.min';
+@import '~bootstrap/dist/css/bootstrap.min';
 
 // Datatables
-@import '../../../node_modules/datatables/media/css/jquery.dataTables.min';
+@import '~datatables/media/css/jquery.dataTables.min';
 
 // Bootstrap Date
-@import '../../../node_modules/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min';
+@import '~eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min';
 
 @import 'login';
 @import 'header';
