--- a/app/views/incomes/sub-pages/_manager_takes.html.erb
+++ b/app/views/incomes/sub-pages/_manager_takes.html.erb
@@ -1,12 +1,11 @@
-<div class="col-sm-6">
-  <div class="card">
+<div class="card">
     <div class="card-body">
 
       <!-- # -->
       <h4 class="card-title">
         Manager Takes
         <b class="badge badge-info">
-          <%= number_to_currency(@manager_takes_sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
+          <%= number_to_currency(ManagerTake.includes(:income).pluck(:amount).sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
         </b>
       </h4>
 
@@ -58,4 +57,3 @@
 
     </div>
   </div>
-</div>
