--- a/app/views/statistics/incomes.html.erb
+++ b/app/views/statistics/incomes.html.erb
@@ -1,10 +1,12 @@
 <div class="row">
 
   <!-- All Incomes -->
-  <%= render 'statistics/incomes/all_incomes_stats' %>
+  <div class="col-md-6">
+    <%= render 'statistics/incomes/all_incomes_stats' %>
+  </div>
 
   <!-- # Right Column -->
-  <div class="col-md-7 stats-col">
+  <div class="col-md-6 stats-col">
 
     <!-- # Manager Takes -->
     <%= render 'statistics/incomes/manager_takes_stats' %>
