--- a/app/views/incomes/sub-pages/_manager_takes.html.erb
+++ b/app/views/incomes/sub-pages/_manager_takes.html.erb
@@ -40,7 +40,7 @@
           <!-- # -->
           <div class="col-md-12">
             <%= link_to new_manager_take_path, :class => 'btn btn-sm btn-info' do %>
-                <%= fa_icon 'plus' %> Add an Insurance
+                <%= fa_icon 'plus' %> Add a Manager Take
             <% end %>
             <%= link_to manager_takes_path, :class => 'btn btn-sm btn-info' do %>
                 <%= fa_icon 'list' %> Show More
