--- a/app/views/insurances/_form.html.erb
+++ b/app/views/insurances/_form.html.erb
@@ -35,9 +35,9 @@
         </div>
 
         <div class="form-group row">
-          <%= expense_form.label 'Pièce jointe', class: 'col-sm-2 col-form-label' %>
+          <%= expense_form.label 'Attached File', class: 'col-sm-2 col-form-label' %>
           <div class="col-sm-10">
-            <%= expense_form.file_field :attached_file, class: 'form-control ' %>
+            <%= expense_form.file_field :attached_file %>
           </div>
         </div>
 
