--- a/app/views/insurances/index.html.erb
+++ b/app/views/insurances/index.html.erb
@@ -22,10 +22,11 @@
 <table id="insurance-data" class="table table-bordered">
   <thead>
     <tr>
-      <th>Assureur</th>
-      <th>Date de Début</th>
-      <th>Date d'expiration</th>
-      <th>Montant en DH</th>
+      <th>Insurer</th>
+      <th>Insurance Document</th>
+      <th>Start Date</th>
+      <th>Expiration</th>
+      <th>Amount</th>
       <th class="td-actions">Actions</th>
     </tr>
   </thead>
@@ -34,6 +35,7 @@
     <% @insurances.each do |insurance| %>
       <tr>
         <td><%= insurance.insurer.name %></td>
+        <td><%= insurance.expense.attached_file.file ? image_tag(insurance.expense.attached_file, width: 159, height: 220) : 'No Document' %></td>
         <td><%= insurance.start_date %></td>
         <td><%= insurance.expiration_date %></td>
         <td><b><%= insurance.expense.amount %></b></td>
@@ -56,7 +58,7 @@
   <tfoot>
     <tr class="table-sum">
       <td colspan="3"><b>Total</b></td>
-      <td colspan="2">
+      <td colspan="3">
         <b><%= @insurances_sum %> DH</b>
       </td>
     </tr>
