--- a/app/views/manager_takes/_form.html.erb
+++ b/app/views/manager_takes/_form.html.erb
@@ -61,6 +61,15 @@
           </div>
         </div>
 
+
+        <div class="form-group row">
+          <%= income_form.label 'Attached File', class: 'col-sm-2 col-form-label' %>
+          <div class="col-sm-10">
+            <%= income_form.file_field :attached_file %>
+          </div>
+        </div>
+
+
         <div class="form-group row">
           <%= income_form.label :description, class: 'col-sm-2 col-form-label' %>
           <div class="col-sm-10">
